--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ rand = "0.9.2"
 thiserror = "2.0"
 netstat2 = "0.11.2"
 sysinfo = "0.33.1"
+tauri-plugin-shell = "2"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
