--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.6"
 description = "RClone Manager is a user-friendly GUI for Rclone, designed to simplify the process of managing and transferring files across various cloud storage services. With its intuitive interface, users can easily configure and execute Rclone commands without needing extensive technical knowledge."
 authors = ["Hakan İSMAİL"]
 edition = "2024"
+default-run = "rclone-manager"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,6 +14,11 @@ edition = "2024"
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "rclone_manager_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
+
+[[bin]]
+name = "rclone-manager-headless"
+path = "src/headless.rs"
+required-features = ["web-server"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
@@ -51,6 +57,15 @@ tauri-plugin-shell = "2"
 tokio-cron-scheduler = "0.13.0"
 croner = "2.0.6"
 
+# Web server dependencies (optional)
+axum = { version = "0.7", optional = true }
+tower = { version = "0.5", optional = true }
+tower-http = { version = "0.5", features = ["cors", "fs", "trace"], optional = true }
+clap = { version = "4.5", features = ["derive"], optional = true }
+tokio-stream = { version = "0.1", optional = true }
+futures = { version = "0.3", optional = true }
+async-stream = { version = "0.3", optional = true }
+
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
 
@@ -78,6 +93,7 @@ url = { version = "2.5", optional = true }
 [features]
 default = ["updater"]
 updater = ["tauri-plugin-updater", "url"]
+web-server = ["axum", "tower", "tower-http", "clap", "tokio-stream", "futures", "async-stream"]
 flatpak = []
 deb = []
 rpm = []
