--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rclone-manager",
-  "version": "0.1.7-beta",
+  "version": "0.1.7",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
