--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -12,8 +12,8 @@ depends=('cairo' 'desktop-file-utils' 'gdk-pixbuf2' 'glib2' 'gtk3' 'hicolor-icon
 optdepends=('7zip: Encrypt/decrypt backup data')
 options=('!strip' '!debug')
 # install=${pkgname}.install
-source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64_linux.deb")
-source_aarch64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_arm64_linux.deb")
+source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64.deb")
+source_aarch64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_arm64.deb")
 sha256sums_x86_64=('SKIP')
 sha256sums_aarch64=('SKIP')
 package() {
