--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tauri-apps/plugin-updater": "^2.9.0",
     "chart.js": "^4.4.9",
     "cronstrue": "^3.9.0",
+    "marked": "^17.0.0",
     "ngx-mat-timepicker": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -67,6 +68,7 @@
     "@tauri-apps/cli": "^2.3.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/jasmine": "~5.1.0",
+    "@types/marked": "^5.0.2",
     "angular-eslint": "20.1.1",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
