--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -76,7 +76,7 @@ zbus = "5.7.1"
 futures-lite = "2.6.0"
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
+windows-sys = { version = "0.59.0", features = ["Win32_System_Threading", "Win32_Storage_FileSystem"] }
 windows = { version = "0.60.0", features = ["Networking_Connectivity"] }
 shellexpand = "3.1.1"
 keyring = { version = "3", features = ["windows-native"] }
