--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,29 +35,22 @@ tauri-plugin-http = "2"
 tauri-plugin-os = "2"
 zip = "4.0.0"
 reqwest = { version = "0.12.19", features = ["json", "blocking"] }
-lazy_static = "1.5.0"
-dirs = "6.0.0"
-anyhow = "1.0.98"
 tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
 once_cell = "1.21.3"
 log = "0.4.27"
-serde_urlencoded = "0.7.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 which = "7.0.3"
 walkdir = "2.5.0"
 sha2 = "0.10.9"
 tempfile = "3.20.0"
-regex = "1.11.1"
 uuid = { version = "1.18", features = ["v4"] }
-rand = "0.9.2"
 thiserror = "2.0"
 netstat2 = "0.11.2"
 sysinfo = "0.33.1"
 tauri-plugin-shell = "2"
 tokio-cron-scheduler = "0.13.0"
 croner = "3.0.1"
-base64 = "0.22"
 
 # Implementation based on: https://github.com/tauri-apps/tauri/issues/12022
 # Until Tauri provides a built-in Rust API, this manual implementation is required
@@ -66,12 +59,14 @@ dunce = "1.0"
 
 # Web server dependencies (optional)
 axum = { version = "0.7", optional = true }
-tower = { version = "0.5", optional = true }
 tower-http = { version = "0.5", features = ["cors", "fs", "trace"], optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
-tokio-stream = { version = "0.1", optional = true }
 futures = { version = "0.3", optional = true }
 async-stream = { version = "0.3", optional = true }
+base64 = { version = "0.22", optional = true }
+axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
+rustls = { version = "0.23", features = ["ring"], optional = true }
+anyhow = {version = "1.0.98", optional = true}
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
@@ -100,7 +95,7 @@ url = { version = "2.5", optional = true }
 [features]
 default = ["updater"]
 updater = ["tauri-plugin-updater", "url"]
-web-server = ["axum", "tower", "tower-http", "clap", "tokio-stream", "futures", "async-stream"]
+web-server = ["axum", "tower-http", "clap",  "futures", "async-stream", "axum-server", "rustls", "base64", "anyhow"]
 portable = []
 flatpak = []
 deb = []
